--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,7 +132,7 @@ docker_image_prod:
 
 # Frequently not needed & not done during ep-fast-0.x deploys
 .provision_secrets_staging: &provision_secrets_staging
-  - kubectl get secret cloud-storage-credentials cloudsql-db-credentials secret-key instagram-secret smtp-gmail-com-credentials summon-sftp-secrets --namespace=libraries -oyaml | sed -e '/namespace:/d;/creationTimestamp:/d;/resourceVersion:/d;/uid:/d' | kubectl apply --namespace="${KUBERNETES_NAMESPACE_OVERWRITE}" -f - || true
+  - kubectl get secret cloud-storage-credentials cloudsql-db-credentials summon-sftp-secrets --namespace=libraries -oyaml | sed -e '/namespace:/d;/creationTimestamp:/d;/resourceVersion:/d;/uid:/d' | kubectl apply --namespace="${KUBERNETES_NAMESPACE_OVERWRITE}" -f - || true
 
 # ---------------------
 # DEPLOYMENTS - STAGING
