ci: suspend staging instagram cronjob

--- a/kubernetes/staging.yaml
+++ b/kubernetes/staging.yaml
@@ -318,7 +318,7 @@ metadata:
   name: instagram
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 spec:
-  suspend: false
+  suspend: true
   # times are UTC
   schedule: "10 19 * * *"
   failedJobsHistoryLimit: 2
