ci: add backoffLimits for cron jobs
never retry instagram, if it fails once it will keep failing
retry summon SFTP twice, could be a connection error

--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -263,6 +263,7 @@ spec:
   failedJobsHistoryLimit: 2
   successfulJobsHistoryLimit: 2
   jobTemplate:
+    backoffLimit: 2
     spec:
       template:
         metadata:
@@ -322,6 +323,7 @@ spec:
   successfulJobsHistoryLimit: 2
   jobTemplate:
     spec:
+      backoffLimit: 0
       template:
         metadata:
           labels:
