--- a/Pipfile
+++ b/Pipfile
@@ -26,4 +26,5 @@ whitenoise = {version = "==6.6.0", extras = ["brotli"]}
 xmltodict = "==0.13.0"
 
 [requires]
+# Matches the python version in the Dockerfile
 python_version = "3.10.13"
