--- a/kubernetes/local/configMap.yml
+++ b/kubernetes/local/configMap.yml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: libraries
 data:
-  CAS_SERVER_URL: https://sso-stage.cca.edu/cas/login
+  CAS_SERVER_URL: https://sso5-stage.cca.edu/cas/login
 
   ES_URL: http://elasticsearch.libraries-wagtail:9200
   ES_INDEX_PREFIX: libraries_wagtail
