--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ django_managepy_anywhere = "==2.0"
 autopep8 = "*"
 
 [packages]
-certifi = "==2024.7.4"
+certifi = "==2024.12.14"
 dj-database-url = "==2.2.0"
 django = "==4.1.13"
 django-cas-ng = "==5.0.1"
@@ -21,9 +21,12 @@ l18n = "==2021.3"
 psycopg2 = "==2.9.9"
 pysftp = "==0.2.9"
 uwsgi = "==2.0.26"
-whitenoise = {version = "==6.7.0", extras = ["brotli"]}
 xmltodict = "==0.13.0"
 wagtail = "==5.0.5"
+whitenoise = {version = "==6.7.0", extras = ["brotli"]}
+
+[pipenv]
+sort_pipfile = true
 
 [requires]
 # Matches the python version in the Dockerfile
