--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ libraries/libraries/static/css
 *.min.js
 *.min.js.map
 .eslintcache
+.stylelintcache
 
 # https://github.com/google-github-actions/auth
 gha-creds-*.json
