--- a/kubernetes/staging.yaml
+++ b/kubernetes/staging.yaml
@@ -1,7 +1,6 @@
 ---
-# this is the file used by [ep|mg]-full-... tagged releases
-# create the namespace for libraries
-
+# This file is used by stg-deploy-X tags, see staging.yml GH Action
+# Create the namespace for libraries
 kind: Namespace
 apiVersion: v1
 metadata:
@@ -17,33 +16,20 @@ metadata:
   name: app
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 data:
-  # TODO review k8s secrets — some are unused (secret-key) and others should be converted to Secret Manager
-  # Generic
-  DJANGO_SETTINGS_MODULE: libraries.settings
   KUBERNETES_NAMESPACE: ${KUBERNETES_NAMESPACE_OVERWRITE}
-
-  # CAS
+  # Most of these are references in libraries/libraries/settings/base.py
+  DJANGO_SETTINGS_MODULE: libraries.settings
   CAS_SERVER_URL: "https://sso5-stage.cca.edu/cas/login"
-
-  # Media
   MEDIA_URL: "https://storage.googleapis.com/libraries-staging-${KUBERNETES_NAMESPACE_OVERWRITE}/"
-
-  # Review Apps
-  DEPLOY_RELEASE: ${KUBERNETES_NAMESPACE_OVERWRITE}
-  # DEPLOY_RELEASE: ${CI_COMMIT_REF_NAME}
-  # DEPLOY_COMMIT_HASH: ${CI_COMMIT_SHORT_SHA}
-  # DEPLOY_BRANCH_NAME: ${CI_MERGE_REQUEST_SOURCE_BRANCH_NAME}
-  # DEPLOY_SERVER_NAME: ${KUBERNETES_NAMESPACE_OVERWRITE}
-
-  # Elastic Search
   ES_INDEX_PREFIX: ${KUBERNETES_NAMESPACE_OVERWRITE}
-
-  # Google Cloud Storage
+  DB_NAME: libraries-${KUBERNETES_NAMESPACE_OVERWRITE}
+  # For static files in Google Cloud Storage & secrets in Secret Manager
   GS_PROJECT_ID: cca-web-staging
   GS_BUCKET_NAME: libraries-media-staging-${KUBERNETES_NAMESPACE_OVERWRITE}
 
-  # Database
-  DB_NAME: libraries-${KUBERNETES_NAMESPACE_OVERWRITE}
+  # Review Apps
+  # ? Where is this used?
+  DEPLOY_RELEASE: ${KUBERNETES_NAMESPACE_OVERWRITE}
 
 ---
 # The application itself.
@@ -69,7 +55,7 @@ spec:
         - name: gcr-json-key
       initContainers:
         - name: init-app
-          image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+          image: ${IMAGE}
           imagePullPolicy: Always
           command:
             [
@@ -104,7 +90,7 @@ spec:
                   key: credentials
       containers:
         - name: app
-          image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+          image: ${IMAGE}
           imagePullPolicy: Always
           # Env variables form ConfigMap
           envFrom:
@@ -279,7 +265,7 @@ spec:
                 secretName: summon-sftp-secrets
           containers:
             - name: summon
-              image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: ${IMAGE}
               imagePullPolicy: IfNotPresent
               args:
                 - python
@@ -335,7 +321,7 @@ spec:
           restartPolicy: Never
           containers:
             - name: publish-scheduled-pages
-              image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: ${IMAGE}
               imagePullPolicy: IfNotPresent
               args:
                 - python
