--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -131,6 +131,8 @@ jobs:
         env:
           # see staging.yaml for needed vars, most are derived from namespace
           IMAGE: ${{ env.REPOSITORY }}/${{ env.IMAGE}}:${{ steps.tag.outputs.tag }}
+          # needed in the env for production.yaml
+          KUBERNETES_NAMESPACE_OVERWITE: ${{ env.K8S_NAMESPACE }}
         run: |
           # Ensure namespace exists
           kubectl get namespace ${K8S_NAMESPACE} || kubectl create namespace ${K8S_NAMESPACE}
