--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint": "eslint --cache .",
     "js": "gulp js",
     "stylelint": "stylelint --cache --config .stylelintrc.json --fix **/*.scss",
-    "test": "eslint --cache .; sass-lint --verbose --no-exit",
+    "test": "npm run eslint; npm run stylelint",
     "watch": "gulp"
   },
   "browserslist": [
@@ -25,26 +25,26 @@
   },
   "homepage": "https://github.com/cca/libraries_wagtail#readme",
   "dependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
-    "autoprefixer": "^10.4.20",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "autoprefixer": "^10.4.21",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^10.0.0",
-    "gulp-sass": "^6.0.0",
+    "gulp-sass": "^6.0.1",
     "gulp-uglify": "^3.0.2",
-    "postcss": "^8",
-    "sass": "^1.83.4"
+    "postcss": "^8.5.3",
+    "sass": "^1.86.0"
   },
   "devDependencies": {
-    "eslint": "^9.19.0",
-    "globals": "^15.14.0",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "postcss-scss": "^4.0.9",
-    "stylelint": "^16.14.1",
+    "stylelint": "^16.16.0",
     "stylelint-config-sass-guidelines": "^12.1.0",
     "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.11.0"
+    "stylelint-scss": "^6.11.1"
   },
   "engines": {
     "node": "~20"
