--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,7 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/dependabot-2.0.json
 version: 2
 updates:
-  - package-ecosystem: "uv"
+  - directory: "/"
+    package-ecosystem: "uv"
+    schedule:
+      interval: "weekly"
