chore: python 3.12 and migrate to debian bookworm
this required some changes so that uWSGI builds on bookworm
also removed a bunch dockerfile lines to get a postgres client
we can now use the bookworm postgres client which is v15
but compatible with our v14 db server

--- a/mise.toml
+++ b/mise.toml
@@ -1,7 +1,7 @@
 [env]
-# matches versions below, in Dockerfile, and in pyproject.toml
-UV_PYTHON = "3.10.13"
+# Python version must match Dockerfile and pyproject.toml
+UV_PYTHON = "3.12.11"
 
 [tools]
 node = "20.18.1"
-python = "3.10.13"
+python = "3.12.11"
