chore: ignore some type errors
Django/Wagtail throw a lot of false errors due not to being typed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "workbench.editor.customLabels.patterns": {
-        "**/readme.md": "${dirname} readme"
+    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportAttributeAccessIssue": "none",
+        "reportCallIssue": "none",
     }
 }
