ci: use sso.cca.edu for staging CAS

--- a/kubernetes/staging.yaml
+++ b/kubernetes/staging.yaml
@@ -19,7 +19,7 @@ data:
   KUBERNETES_NAMESPACE: ${KUBERNETES_NAMESPACE_OVERWRITE}
   # Most of these are references in libraries/libraries/settings/base.py
   DJANGO_SETTINGS_MODULE: libraries.settings
-  CAS_SERVER_URL: "https://sso5-stage.cca.edu/cas/login"
+  CAS_SERVER_URL: "https://sso.cca.edu/cas/login"
   MEDIA_URL: "https://storage.googleapis.com/libraries-staging-${KUBERNETES_NAMESPACE_OVERWRITE}/"
   ES_INDEX_PREFIX: ${KUBERNETES_NAMESPACE_OVERWRITE}
   DB_NAME: libraries-${KUBERNETES_NAMESPACE_OVERWRITE}
