--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "ECL-2.0"
 license-files = ["LICENSE.txt"]
 readme = "readme.md"
 # Python version must match Dockerfile and mise.toml
-requires-python = "==3.12.11"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "dj-database-url==3.0.1",
     "django==5.2.7",
