build: python 3.13, intermediate builder image
many changes to the dockerfile here including
- use uv image to build dependencies
- copy built venv into separate runtime image
- remove rsync from image
- use libpq-dev in builder img & postgres-client in runtime
- put venv on path but do not set PYTHONPATH
- edit uwsgi to chdir to /app/libraries & rm pcre-jit

--- a/kubernetes/uwsgi.ini
+++ b/kubernetes/uwsgi.ini
@@ -1,5 +1,4 @@
 [uwsgi]
-
 # Basic configuration.
 # https://uwsgi-docs.readthedocs.io/en/latest/Options.html
 strict = true
@@ -13,13 +12,12 @@ no-orphans = true
 honour-range = true
 close-on-exec = true
 thunder-lock = true
-pcre-jit = true
 log-x-forwarded-for = true
 http-socket = :8000
 # to address repeated warnings in logs
 buffer-size = 32768
 # Application configuration.
-chdir = /app
+chdir = /app/libraries
 # serving files like this does not work (throws 500 errors)
 # check-static = /app/libraries/static
 module = libraries.wsgi:application
