ci: dependabot target-branch = dev

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,21 +7,25 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    target-branch: dev
   - package-ecosystem: github-actions
     commit-message:
       prefix: "chore"
     directory: /
     schedule:
       interval: weekly
+    target-branch: dev
   - package-ecosystem: npm
     commit-message:
       prefix: "chore"
     directory: "/"
     schedule:
       interval: weekly
+    target-branch: dev
   - package-ecosystem: "uv"
     commit-message:
       prefix: "chore"
     directory: "/"
     schedule:
       interval: "weekly"
+    target-branch: dev
